--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nodebb-plugin-lost-deleted-posts",
-  "version": "0.3.1",
-  "description": "A starter kit for quickly creating NodeBB plugins",
+  "version": "1.1.0",
+  "description": "Plugin to hide deleted posts",
   "main": "library.js",
   "repository": {
     "type": "git",
